Fixes to MemAppender